[package]
name = "lib-migrations-sql"
version = "0.1.0"
edition = "2021"
license = "BSL-1.0"
description = "SQL migrations built on lib-migrations-core"

[workspace]

[features]
default = ["sqlite"]
sqlite = ["rusqlite"]

[dependencies]
lib-migrations-core = { path = "../lib-migrations-core" }
rusqlite = { version = "0.31", optional = true }
thiserror = "2"

[dev-dependencies]
tempfile = "3"
